--- a/index.css
+++ b/index.css
@@ -57,10 +57,6 @@ ul {
     font-size: 200%;
 }
 
-.searchbar {
-    grid-area: searchbar;
-}
-
 .adv-horizontal {
     grid-area: adv-horizontal;
 }
@@ -132,14 +128,14 @@ a:hover {
     font-size: 110%;
 }
 
-.searchbox {
+.searchbar {
+    grid-area: searchbar;
     display: -webkit-inline-flex;
     display: inline-flex;
-    background: orange;
     width: 100%;
 }
 
-.searchbox input {
+.searchbar input {
     border: 3px solid #F9E148;
     height: 36px;
     font-size: 120%;
@@ -147,7 +143,7 @@ a:hover {
     flex-grow: 1;
 }
 
-.searchbox button {
+.searchbar button {
     background: #F9E148;
     color: #000;
     height: 44px;
